--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,9 @@
         <activity android:name=".InstructorProfileActivity" />
 
         <activity android:name=".InstructorsListActivity" />
-        <activity android:name=".user.MyProfile_2"></activity>
+        <activity android:name=".user.MyProfile_2"
+            android:theme="@style/UserProfileTheme"
+            ></activity>
 
         <activity
             android:name=".VideoWithComment"
