Added WishList and Cart Also Update google Sign

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,21 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
+    signingConfigs {
+        debug {
+            storeFile file("../app/CareerAnna.jks")
+            storePassword "career"
+            keyAlias "key0"
+            keyPassword "career"
+        }
+        release {
+            storeFile file("../app/CareerAnna.jks")
+            storePassword "career"
+            keyAlias "key0"
+            keyPassword "career"
+        }
+    }
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.careeranna.careeranna"
