--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,9 +94,10 @@
         <activity
             android:name=".user.MyProfile_2"
             android:theme="@style/UserProfileTheme" />
+
         <activity
             android:name=".activity.VideoWithComment"
-            android:configChanges="orientation|screenLayout|screenSize"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             />
         <activity android:name=".Exams"
             android:configChanges="orientation|screenSize|screenLayout" />
