--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
 
     <application
@@ -50,22 +49,26 @@
         <activity
             android:name=".user.SignUp"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:label="Sign In" />
         <activity
             android:name=".activity.MyCourses"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|screenSize|screenLayout"
+            android:configChanges="orientation|screenSize|screenLayout|locale"
             android:label="MyCourses" />
         <activity
             android:screenOrientation="portrait"
             android:name=".user.Register"
+            android:windowSoftInputMode="adjustPan"
             android:label="Create An Account" />
         <activity
             android:name=".ParticularCourse"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:configChanges="orientation|screenSize|screenLayout" />
         <activity android:name=".Pdf"
             android:label="Pdf View"
+            android:windowSoftInputMode="adjustPan"
             android:configChanges="orientation|screenSize|screenLayout"
             />
         <service android:name=".service.VideoService" />
@@ -73,56 +76,71 @@
         <activity
             android:name=".activity.ParticularArticleActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:label="Article" />
         <activity
             android:screenOrientation="portrait"
             android:name=".ExamPrepActivity"
+            android:windowSoftInputMode="adjustPan"
             android:label="Examp Prep" />
         <activity
             android:name=".MyExamPrepActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:label="My Exam Prep" />
         <activity android:name=".activity.Payment"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             />
         <activity
             android:name=".activity.PasswordReset"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:label="Password Reset" />
         <activity android:name=".activity.PurchaseCourseDetail"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:configChanges="orientation|screenSize|screenLayout"
             />
         <activity android:name=".activity.PaytmPayment" />
         <activity android:name=".ExampPrepParticular"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             />
         <activity
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:name=".activity.FilterOfCategory"
             android:label="Filter Course" />
         <activity
             android:screenOrientation="portrait"
             android:name=".activity.SortByCourse"
+            android:windowSoftInputMode="adjustPan"
             android:label="Sort Course" />
         <activity android:name=".InstructorProfileActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".InstructorsListActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             />
         <activity
             android:screenOrientation="portrait"
             android:name=".user.MyProfile_2"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/UserProfileTheme" />
 
         <activity
             android:name=".activity.VideoWithComment"
+            android:windowSoftInputMode="adjustPan"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             />
         <activity android:name=".Exams"
+            android:windowSoftInputMode="adjustPan"
             android:configChanges="orientation|screenSize|screenLayout" />
         <activity
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:name=".activity.ExploreNotSignActivity"
             android:label="Explore" />
         <activity android:name=".activity.PurchaseCourseDetail2" />
