--- a/sdkui/src/main/AndroidManifest.xml
+++ b/sdkui/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.payu.payuui" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.payu.payuui">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,6 +9,7 @@
 
     <uses-permission
         android:name="android.permission.RECEIVE_SMS"
+        tools:node="remove"
         android:protectionLevel="signature" />
 
 
