--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".activity.PurchaseCourseActivity"
+        <activity android:name=".NotificationArticleActivity"></activity>
+        <activity
+            android:name=".activity.NotificationCourseActivity"
+            android:configChanges="orientation|screenSize|screenLayout"
+            android:parentActivityName=".activity.MyCourses"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.PurchaseCourseActivity"
             android:configChanges="orientation|screenSize|screenLayout"
             android:parentActivityName=".activity.MyCourses"
             android:screenOrientation="portrait"
